--- a/package.json
+++ b/package.json
@@ -20,15 +20,21 @@
   "devDependencies": {
     "broccoli-asset-rev": "^1.0.0",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
+    "broccoli-ember-script": "^0.1.1",
+    "broccoli-emblem-compiler": "^0.3.19",
     "ember-cli": "0.1.4",
+    "ember-cli-coffeescript": "^0.6.0",
+    "ember-cli-compass-compiler": "0.0.17",
     "ember-cli-content-security-policy": "0.3.0",
     "ember-cli-dependency-checker": "0.0.6",
     "ember-cli-esnext": "0.1.1",
-    "ember-cli-ic-ajax": "0.1.1",
+    "ember-cli-ic-ajax": "^0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.1.2",
+    "ember-cli-showdown": "^0.1.3",
     "ember-data": "1.0.0-beta.12",
     "ember-export-application-global": "^1.0.0",
+    "ember-paper": "0.0.7",
     "express": "^4.8.5",
     "glob": "^4.0.5"
   }
